# crisp-dm-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: 1. Business Understanding.ipynb  2. Data understanding.ipynb  3. Data preparation.ipynb  4. Modeling.ipynb  5. Evaluation.ipynb  6. Deployment.ipynb
source/: cleaning.py  data.py  model.py
