[tool.poetry]
name = "CRISP-DM template"
version = "1.0"
description = "A ready to use template for the CRISP-DM data science workflow"
authors = ["Michael Verdegaal <michaelverdegaal@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyterlab = "^3.3.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
